Add server-wide observability filters
